tests/invalid/dict_subscript_assign_value_type_mismatch/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    d[1] = 3.5


if __name__ == "__main__":
    run_case()
